--- a/plugins/gui/frontend/src/assets/scss/styles.scss
+++ b/plugins/gui/frontend/src/assets/scss/styles.scss
@@ -182,6 +182,10 @@ textarea {
     margin: 0;
     list-style: none;
   }
+
+  .x-tabs > ul {
+    padding-left: 0px;
+  }
 }
 
 
